--- a/Accesorios.html
+++ b/Accesorios.html
@@ -99,7 +99,7 @@
     
     <div class="catalogo">
         <div class="telefono">
-            <img src="C:\Users\MINEDUCYT\Desktop\Pagina web\Imagenes\IPHONE11.jpg"  width="500" height="250" alt="Teléfono 1">
+            <img src="Imagenes\IPHONE11.jpg"  width="500" height="250" alt="Teléfono 1">
             <h3>Iphone 11</h3>
             <p>Un smartphone con un rendimiento bastante bueno para tu dia a dia</p>
             <button onclick="document.getElementById('modal1').style.display='block'">Más Información</button>
