--- a/Accesorios.html
+++ b/Accesorios.html
@@ -105,13 +105,13 @@
             <button onclick="document.getElementById('modal1').style.display='block'">Más Información</button>
         </div>
         <div class="telefono">
-            <img src="C:\Users\MINEDUCYT\Desktop\Pagina web\Imagenes\IPHONE15.jpg"  width="500" height="250" alt="Teléfono 2">
+            <img src="Imagenes\IPHONE15.jpg"  width="500" height="250" alt="Teléfono 2">
             <h3>Iphone 15</h3>
             <p>El equipo perfecto que necesitas para tus redes sociales.</p>
             <button onclick="document.getElementById('modal2').style.display='block'">Más Información</button>
         </div>
         <div class="telefono">
-            <img src="C:\Users\MINEDUCYT\Desktop\Pagina web\Imagenes\IPHONE14.jpg"  width="500" height="250" alt="Teléfono 3">
+            <img src="Imagenes\IPHONE14.jpg"  width="500" height="250" alt="Teléfono 3">
             <h3>Iphone 14</h3>
             <p>Un diseño elegante ademas de su buen procesador.</p>
             <button onclick="document.getElementById('modal3').style.display='block'">Más Información</button>
