--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>TecnoMovil</title>
 </head>
-<body background="C:\Users\MINEDUCYT\Desktop\Pagina web\Imagenes\FONDO 1.jpg">
+<body background="Imagenes\FONDO 1.jpg">
 		<style>
     </style>  <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
