--- a/Nosotros.html
+++ b/Nosotros.html
@@ -22,9 +22,9 @@
 </body>
 </html>
 
-<img src="C:\Users\MINEDUCYT\Desktop\Pagina web\Imagenes\Logo.png">
+<img src="Imagenes\Logo.png">
 <center><h1>Reconocidos a nivel Internacional</h1></center>
-	<center><img src="C:\Users\MINEDUCYT\Desktop\Pagina web\Imagenes\Paises.png"  width="500" height="250"></center>	
+	<center><img src="Imagenes\Paises.png"  width="500" height="250"></center>	
 		<div class="footer">
         <p>&copy; <h2> 
         </h2></p>
