--- a/Telefonos.html
+++ b/Telefonos.html
@@ -99,13 +99,13 @@
     
     <div class="catalogo">
         <div class="telefono">
-            <img src="C:\Users\MINEDUCYT\Desktop\Pagina web\Imagenes\zfold6.jpeg"  width="500" height="250" alt="Teléfono 1">
+            <img src="Imagenes\zfold6.jpeg"  width="500" height="250" alt="Teléfono 1">
             <h3>Samsumg Z fold6</h3>
             <p>Un smartphone con excelente rendimiento y cámara de alta calidad.</p>
             <button onclick="document.getElementById('modal1').style.display='block'">Más Información</button>
         </div>
         <div class="telefono">
-            <img src="C:\Users\MINEDUCYT\Desktop\Pagina web\Imagenes\zflip6.jpg"  width="500" height="250" alt="Teléfono 2">
+            <img src="Imagenes\zflip6.jpg"  width="500" height="250" alt="Teléfono 2">
             <h3>Samsumg Z flip 6</h3>
             <p>Equilibrio perfecto entre precio y prestaciones.</p>
             <button onclick="document.getElementById('modal2').style.display='block'">Más Información</button>
