--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
 <center><h1> Nuestras marcas disponibles por el momento:<h1></center>
    <div class="catalogo">
         <div class="marcas">
-            <a href="https://www.samsung.com/latin/"><img src="C:\Users\MINEDUCYT\Desktop\Pagina web\Imagenes\samsumg.png" width="350" height="150" alt="Teléfono 1"></a>
+            <a href="https://www.samsung.com/latin/"><img src="Imagenes\samsumg.png" width="350" height="150" alt="Teléfono 1"></a>
             <center><h3></h3></center>
             
         </div>
         <div class="marcas">
-            <a href="https://www.apple.com/la/"><img src="C:\Users\MINEDUCYT\Desktop\Pagina web\Imagenes\apple.png" width="350" height="150" alt="Teléfono 2"></a>
+            <a href="https://www.apple.com/la/"><img src="Imagenes\apple.png" width="350" height="150" alt="Teléfono 2"></a>
             <center><h3></h3></center>
             
         </div>
