--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </nav>
     <br>
     <br>
- <img src="C:\Users\MINEDUCYT\Desktop\Pagina web\Imagenes\Logo.png" width="500" height="200">
+ <img src="Imagenes\Logo.png" width="500" height="200">
 
 </maarquee>
 <center><h1>TecnoMóvil es una plataforma en línea dedicada a la venta de los últimos modelos de celulares y accesorios para tu celular.Ofrecemos comparativas detalladas, reseñas de expertos, y las mejores ofertas del mercado para que
